modification chambre et generation des matricuules et numero

--- a/templates/chambre/enregistrer.html.twig
+++ b/templates/chambre/enregistrer.html.twig
@@ -6,7 +6,7 @@
 
 
         {{ form_start(form) }}
-        {{ form_row(form.numero, {'attr': {'placeholder': 'Numero'}}) }}
+        {{ form_row(form.numero, {'attr': {'placeholder': 'Le numero sera generee automatiquement '}}) }}
         {{ form_row(form.numeroBatiment, {'attr': {'placeholder': 'Numero Du Batiment'}}) }}
         {{ form_row(form.type, {'attr': {'placeholder': 'Deux ou Individuel'}}) }}
        <button type="submit" class="btn btn-success">
