--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
-
+            <script src="{{asset('build/js/generate.js')}}"></script>
             <script src="{{asset('vendors/jquery/dist/jquery.min.js')}}"></script>
             <!-- Bootstrap -->
             <script src="{{asset('vendors/bootstrap/dist/js/bootstrap.min.js')}}"></script>
