commit toute les fonctionnalites

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -94,7 +94,7 @@
             <script src="{{asset('vendors/pnotify/dist/pnotify.js')}}"></script>
             <script src="{{asset('vendors/pnotify/dist/pnotify.buttons.js')}}"></script>
             <script src="{{asset('vendors/pnotify/dist/pnotify.nonblock.js')}}"></script>
-
+            <script src="{{asset('js/script.js')}}"></script>
         {% endblock %}
     </body>
 </html>
