--- a/templates/etudiant/liste.html.twig
+++ b/templates/etudiant/liste.html.twig
@@ -24,7 +24,7 @@
         <td>{{etudiant.email}}</td>
         <td>{{etudiant.tel}}</td>
         <td>{{etudiant.bourse}}</td>
-        <td>{{etudiant.chambre.numero}}</td>
+        <td>{{etudiant.nomchambre}}</td>
         <td>
 
             <a href="{{ path('etudiant_edite', {'id': etudiant.id}) }}" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Modifier
