--- a/templates/etudiant/layout.html.twig
+++ b/templates/etudiant/layout.html.twig
@@ -1,129 +1,155 @@
 {% extends 'base.html.twig' %}
-{% block title %} Espace Admin {% endblock %}
-{% block stylesheets %} {{parent()}}
+{% block title %}
+	Espace Admin
+{% endblock %}
+{% block stylesheets %}
+	{{parent()}}
 
-    <style type="text/css">
-    </style>
+	<style type="text/css"></style>
 {% endblock %}
 
 
 {% block body %}
-    <body class="nav-md">
-    <div class="container body">
-        <div class="main_container">
+	<body class="nav-md">
+		<div class="container body">
+			<div class="main_container">
 
-            <div class="col-md-3 left_col">
-                <div class="left_col scroll-view">
-                    <div class="navbar nav_title" style="border: 0;">
-                        <a href="#" class="site_title"><i class="fa fa-paw"></i> <span>Greservation</span></a>
-                    </div>
+				<div class="col-md-3 left_col">
+					<div class="left_col scroll-view">
+						<div class="navbar nav_title" style="border: 0;">
+							<a href="#" class="site_title">
+								<i class="fa fa-paw"></i>
+								<span>Greservation</span>
+							</a>
+						</div>
 
-                    <div class="clearfix"></div>
+						<div class="clearfix"></div>
 
-                    <!-- menu profile quick info -->
+						<!-- menu profile quick info -->
 
-                    <div class="profile clearfix">
+						<div class="profile clearfix"></div>
 
-                    </div>
+						<!-- /menu profile quick info -->
 
-                    <!-- /menu profile quick info -->
+						<br>
 
-                    <br>
+						<!-- sidebar menu -->
+						<div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+							<div class="menu_section">
 
-                    <!-- sidebar menu -->
-                    <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-                        <div class="menu_section">
+								<ul class="nav side-menu" style="">
+									{% block menu_section %}
+										<div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+											<div class="menu_section active">
+												<h4>MENU</h4>
+												<ul class="nav side-menu" style="">
+													<li class="">
+														<a href="{{ path('etudiant_liste') }}">
+															<i class="fa fa-list-ul"></i>
+															Liste Etudiant
+															<span class="fa fa-chevron-down"></span>
+														</a>
 
-                            <ul class="nav side-menu" style="">
-                                {% block menu_section %}
-                                    <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-                                        <div class="menu_section active">
-                                            <h4>MENU</h4>
-                                            <ul class="nav side-menu" style="">
-                                                <li class=""><a href="{{ path('etudiant_liste') }}"><i class="fa fa-list-ul"></i> Liste Etudiant <span class="fa fa-chevron-down"></span></a>
+													</li>
+													<li>
+														<a href="{{ path('chambre_liste') }}">
+															<i class="fa fa-list-ul"></i>
+															Liste Chambre
+															<span class="fa fa-chevron-down"></span>
+														</a>
 
-                                                </li>
-                                                <li><a href="{{ path('chambre_liste') }}"><i class="fa fa-list-ul"></i> Liste Chambre <span class="fa fa-chevron-down"></span></a>
+													</li>
+													<li>
+														<a href="{{ path('etudiant_register') }}">
+															<i class="fa fa-edit"></i>
+															Enregistrer Etudiant
+															<span class="fa fa-chevron-down"></span>
+														</a>
 
-                                                </li>
-                                                <li><a href="{{ path('etudiant_register') }}"><i class="fa fa-edit"></i> Enregistrer Etudiant <span class="fa fa-chevron-down"></span></a>
+													</li>
+													<li>
+														<a href="{{ path('chambre_register') }}">
+															<i class="fa fa-edit"></i>
+															Enregistrer Chambre
+															<span class="fa fa-chevron-down"></span>
+														</a>
 
-                                                </li>
-                                                <li><a href="{{ path('chambre_register') }}"><i class="fa fa-edit"></i> Enregistrer Chambre <span class="fa fa-chevron-down"></span></a>
-
-                                                </li>
-                                            </ul>
-                                        </div>
-
-
-                                    </div>
-                                {% endblock %}
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- /sidebar menu -->
-                </div>
-            </div>
-
-
-
-            <!-- top navigation c est dans cette partie que je vais mettre le header -->
-            {% block navbar %}
-                <div class="nav_menu">
-                    <nav>
-                        <div class="nav toggle">
-                            <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-
-                        </div>
-                        <h1 style="margin-left: 20%;">Gerer les reservations</h1>
-                        <a href="{{ path('app_logout') }}"><i class="fa fa-sign-out pull-right"></i>Deconnexion</a>
-
-                    </nav>
-                </div>
-            {% endblock %}
-            <!-- /top navigation -->
+													</li>
+												</ul>
+											</div>
 
 
-            <!-- page content -->
-            <div class="right_col" role="main" style="min-height: 2095px;">
-                {% block res_body %}
-
-                {% endblock %}
-
-
-                <!-- top tiles -->
-                <div class="row tile_count">
-                    <!-- je vais mettre ici mon  header -->
-                    <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-
-                    </div>
-                    {% block footer %}
-                        <!-- footer content -->
-                        <footer class="container-fluid">
-                            <h2>Contactez l'ODC</h2>
-                            <span class="glyphicon glyphicon-earphone"></span>  +221 33 839 21 00
-                            <br>
-
-                            <span class="glyphicon glyphicon-globe"></span>        https://www.academysonatel.com//
-                            <br>
-                            <span class="glyphicon glyphicon-map-marker"></span> Orange Digital center
-
-                            <br>
-                            <div class="text-center" style="background-color:black;">
-                                Copyright © 2020 ODC <br>
-                                Site conçu et réalisé par Samba Drame et Ahmadou Sakhir Fall
-                            </div>
+										</div>
+									{% endblock %}
+								</ul>
+							</div>
+						</div>
+						<!-- /sidebar menu -->
+					</div>
+				</div>
 
 
-                        </footer>
-                        <!-- /footer content -->
-                    {% endblock %}
-                </div>
-            </div>
-            <!-- /page content -->
-        </div>
-    </div>
-    </body>
+				<!-- top navigation c est dans cette partie que je vais mettre le header -->
+				{% block navbar %}
+					<div class="nav_menu">
+						<nav>
+							<div class="nav toggle">
+								<a id="menu_toggle">
+									<i class="fa fa-bars"></i>
+								</a>
+
+							</div>
+							<h1 style="margin-left: 20%;">Gerer les reservations</h1>
+							<a href="{{ path('app_logout') }}">
+								<i class="fa fa-sign-out pull-right"></i>Deconnexion</a>
+
+						</nav>
+					</div>
+				{% endblock %}
+				<!-- /top navigation -->
+
+
+				<!-- page content -->
+				<div class="right_col" role="main" style="min-height: 2095px;">
+					{% block res_body %}{% endblock %}
+
+
+					<!-- top tiles -->
+					<div
+						class="row tile_count">
+						<!-- je vais mettre ici mon  header -->
+						<div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count"></div>
+						{% block footer %}
+							<!-- footer content -->
+							<footer class="container-fluid">
+								<h2>Contactez l'ODC</h2>
+								<span class="glyphicon glyphicon-earphone"></span>
+								+221 33 839 21 00
+								<br>
+
+								<span class="glyphicon glyphicon-globe"></span>
+								https://www.academysonatel.com//
+								<br>
+								<span class="glyphicon glyphicon-map-marker"></span>
+								Orange Digital center
+
+								<br>
+								<div class="text-center" style="background-color:black;">
+									Copyright © 2020 ODC
+									<br>
+									Site conçu et réalisé par Samba Drame et Ahmadou Sakhir Fall
+								</div>
+
+
+							</footer>
+							<!-- /footer content -->
+						{% endblock %}
+					</div>
+				</div>
+				<!-- /page content -->
+			</div>
+		</div>
+
+	</body>
 
 {% endblock %}
-
