--- a/templates/chambre/enregistrer.html.twig
+++ b/templates/chambre/enregistrer.html.twig
@@ -7,7 +7,7 @@
     <div class="x_title">
 
         {{ form_start(form) }}
-        {{ form_row(form.numero, {'attr': {'placeholder': 'Le numero sera generee automatiquement '}}) }}
+        {{ form_row(form.numero, {'attr': {'placeholder': 'Le numero sera genere automatiquement '}}) }}
         {{ form_row(form.numeroBatiment, {'attr': {'placeholder': 'Numero Du Batiment'}}) }}
         {{ form_row(form.type, {'attr': {'placeholder': 'Deux ou Individuel'}}) }}
        <button type="submit" class="btn btn-success">
